--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 html{
 	overflow-x: hidden;
 }
-header{
+.header{
 	background: url(img/landscape.png) no-repeat center;
 	height: 628px;
 	width: 1300px;
@@ -116,41 +116,40 @@ height: 16px;
 .mobile{
 	display: none;
 }
-@media screen and (max-width: 560px) and (min-width: 320px){
-	header{
-	background: url(img/landscape.png) no-repeat center;
-	height: 628px;
-	width: 500px;
-	margin: 0 auto;
+@media screen and (max-device-width: 560px) {
+	.header {
+		background: url(img/landscape.png) no-repeat center;
+		height: 628px;
+		width: 500px;
+		margin: 0 auto;
 	}
-	.main-bar , .center-text , .footer{
+	.main-bar, .center-text, .footer {
 		display: none;
 	}
-
 	.mobile{
 		display: flex;
 		flex-direction: column;
 		align-items: center;
 		color: white;
 	}
-	.climbo{
-	display: flex;
-	color: white;
-	padding-top: 159px;
-	font-size: 60px;
-}
-.mobile p {
-	padding-top: 220px;
-}
-.mobile span{
-	font-size: 12px;
-}
-.btn_mobile{
-	margin-top: 20px;
-	height: 30px;
-	width: 80px;
-	border-radius: 25px;
-}
+	.climbo {
+		display: flex;
+		color: white;
+		padding-top: 159px;
+		font-size: 60px;
+	}
+	.mobile p {
+		padding-top: 220px;
+	}
+	.mobile span {
+		font-size: 12px;
+	}
+	.btn_mobile {
+		margin-top: 20px;
+		height: 30px;
+		width: 80px;
+		border-radius: 25px;
+	}
 }
 
 
