--- a/style.css
+++ b/style.css
@@ -1,9 +1,12 @@
-html{
+html {
 	overflow-x: hidden;
+}
+body {
+	margin: 0;
 }
 .header{
 	background: url(img/landscape.png) no-repeat center;
-	height: 628px;
+	height: 100vh;
 	width: 1300px;
 	margin: 0 auto;
 }
@@ -119,14 +122,16 @@ height: 16px;
 @media screen and (max-device-width: 560px) {
 	.header {
 		background: url(img/landscape.png) no-repeat center;
-		height: 628px;
-		width: 500px;
-		margin: 0 auto;
+ 		height: 100vh;
+ 		width: 100%;
+ 		background-size: cover;
 	}
 	.main-bar, .center-text, .footer {
 		display: none;
 	}
 	.mobile{
+		height: 100vh;
+ 		width: 100%;
 		display: flex;
 		flex-direction: column;
 		align-items: center;
@@ -135,7 +140,7 @@ height: 16px;
 	.climbo {
 		display: flex;
 		color: white;
-		padding-top: 159px;
+		margin-top: 159px;
 		font-size: 60px;
 	}
 	.mobile p {
