--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@ body {
 }
 .header{
 	background: url(img/landscape.png) no-repeat center;
+	background-size: cover ;
 	height: 100vh;
 	width: 1300px;
 	margin: 0 auto;
